Updated store assets, minor bug fixes, added about page.

--- a/TweetWrap/Views/MainPage.xaml
+++ b/TweetWrap/Views/MainPage.xaml
@@ -48,6 +48,7 @@
                         <MenuFlyout.Items>
                             <controls:ZoomMenuFlyoutItem Width="250" Text="Zoom" Zoom="{x:Bind Model.Zoom, Mode=TwoWay}"/>
                             <MenuFlyoutItem Text="Refresh" Command="{x:Bind Refresh}"/>
+                            <MenuFlyoutItem Text="About" Command="{x:Bind About}"/>
                         </MenuFlyout.Items>
                     </MenuFlyout>
                 </Button.Flyout>
